--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,17 @@
     <artifactId>seMethods</artifactId>
     <version>0.1.0.1</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver</artifactId>
+            <version>3.6.4</version>
+        </dependency>
+    </dependencies>
+
     <properties>
         <maven.compiler.source>1.6</maven.compiler.source>
         <maven.compiler.target>1.6</maven.compiler.target>
     </properties>
+
 </project>
