--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,42 @@ language: java
 services:
   - docker
 
+addons:
+  hosts:
+    - db
+
+install:
+  - docker build -t database db/.
+  - docker run --rm -d -e MYSQL_ROOT_PASSWORD=example -p 33060:3306 database
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+
+before_script:
+  - mvn clean
+
+script:
+  - mvn test -Dtest=com.napier.sem.AppTest
+
+jobs:
+  include:
+    - stage: unit tests
+      install: skip
+      jdk: oraclejdk11
+      script: mvn test -Dtest=com.napier.sem.AppTest
+    - stage: integration tests
+      jdk: oraclejdk11
+      script: mvn test -Dtest=com.napier.sem.AppIntegrationTest
+    - stage: deploy
+      install: skip
+      jdk: oraclejdk11
+      script:
+        - mvn package -DskipTests=true -Dmaven.javadoc.skip=true
+        - docker-compose up --abort-on-container-exit
+
+stages:
+  - unit tests
+  - integration tests
+  - name: deploy
+    if: branch = masters
+
 after_success:
-  - docker-compose up --abort-on-container-exit
+  - bash <(curl -s https://codecov.io/bash)
