--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,16 @@
-sudo: required
-
 language: java
-
-services:
-  - docker
-
+sudo: false
 addons:
   hosts:
     - db
-
+services:
+  - docker
 install:
   - docker build -t database db/.
   - docker run --rm -d -e MYSQL_ROOT_PASSWORD=example -p 33060:3306 database
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
-
 before_script:
   - mvn clean
-
-script:
-  - mvn test -Dtest=com.napier.sem.AppTest
-
 jobs:
   include:
     - stage: unit tests
@@ -35,12 +26,10 @@ jobs:
       script:
         - mvn package -DskipTests=true -Dmaven.javadoc.skip=true
         - docker-compose up --abort-on-container-exit
-
 stages:
   - unit tests
   - integration tests
   - name: deploy
-    if: branch = masters
-
+    if: branch = master
 after_success:
   - bash <(curl -s https://codecov.io/bash)
